# localai-backend-ikllama.cpp

./: CMakeLists.txt  LICENSE  Makefile  README.es.md  README.md  grpc-server.cpp  prepare.sh  run.sh
patches/: iqk_fa_s_zero.patch
